--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /Mango/.vs/Mango
+
+.vs/GettingStartedMicroServices/FileContentIndex/
