--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 ################################################################################
 
 /Mango/.vs/Mango
-
+/Mango/Mango.Web/bin
+/Mango/Mango.Services.CouponAPI/bin
 .vs/GettingStartedMicroServices/FileContentIndex/
